# cupcake

./: .gitignore  Application.vala  build_and_install.sh  build_translations.sh  com.github.mi11y.cupcake.yml  flatpack_install.sh  flatpack_uninstall.sh  meson.build  uninstall.sh
data/: com.github.milly.cupcake.desktop  cupcake.desktop.in  cupcake.metainfo.xml
po/: LINGUAS  POTFILES  com.github.mi11y.cupcake.pot  de.po  es.po
src/: Application  Application.vala  MainWindow.vala  TelegramLib.vala
src/TDLib/: AuthorizationState.vala  SetTdLibParameters.vala  TdLibFunction.vala
src/Views/: WelcomeView.vala
vapi/: tdjson.vapi
